# sql-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
sql-mcp-server/: SKILL.md
src/: db.py  resources.py  server.py  tools.py
